--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.9.1-1) unstable; urgency=low
+
+  * Fix shared library loading in .asd files (closes:245004)
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 20 Apr 2004 19:30:16 -0600
+
 cl-sql (2.9.0-1) unstable; urgency=low
 
   * New upstream
