--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.9.4-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sat, 24 Apr 2004 07:54:45 -0600
+
 cl-sql (2.9.3-1) unstable; urgency=low
 
   * New upstream
