r9166: Automated commit for clsql debian-version-2.9.4-2

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.9.4-2) unstable; urgency=low
+
+  * Change depends to libmysqlclient-dev (closes:246039) 
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 26 Apr 2004 17:35:16 -0600
+
 cl-sql (2.9.4-1) unstable; urgency=low
 
   * New upstream
