--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.9.6-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 30 Apr 2004 17:07:03 -0600
+
 cl-sql (2.9.5-1) unstable; urgency=low
 
   * New upstream
