--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+30 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.9.7-pre1
+	* sql/metaclass.lisp: Remove old Lispworks cruft
+	and replace it with invocation of new code in kmr-mop.lisp
+	which actually works with Lispworks 4.2
+	
 30 Apr 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
 	* Version 2.9.6
 	* sql/objects.lisp: remove create/drop-sequence-from-class. 
