--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.10.1-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sat,  1 May 2004 04:13:12 -0600
+
 cl-sql (2.9.6-1) unstable; urgency=low
 
   * New upstream
