--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+1 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.10.3
+	* sql/database.lisp: Conform more to CommonSQL output
+	for STATUS command [Marcus Pearce]
+	* sql/sqlite-sql.lisp: Rework to use result-types
+	* sql/sqlite-api-clisp.lisp: Add compatibility layer
+	with sqlite-api-uffi.lisp so that sqlite-sql.lisp can
+	be cleaned up of most clisp reader conditionals
+	* sql/test-init.lisp: Now run field type tests on sqlite
+	backend
+	
 30 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.2
 	* base/basic-sql.lisp: Set default value of :result-types 
