--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.10.3-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sat,  1 May 2004 12:18:35 -0600
+
 cl-sql (2.10.2-1) unstable; urgency=low
 
   * New upstream
