--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,13 @@
 1 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.10.4
+	* sql/tables.lisp: Fix typo in CACHE-TABLE-QUERIES
+	[Marcus Pearce]
+	* db-postgresql/postgresql-sql.lisp: Fix foreign-string vs. cstring
+	bug on SBCL in result-field-names function as reported by Marcus Pearce
+	* db-sqlite/sqlite-sql.lisp: Fix  in database-store-next-row
+	manifest in SBCL testing
+	
+1 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.3
 	* sql/database.lisp: Conform more to CommonSQL output
 	for STATUS command [Marcus Pearce]
