--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
+	* Version 2.10.6
 	* sql/generics.lisp: add generic function for SELECT. 
 	* sql/objects.lisp: make SELECT a method specialisation. 
 	* sql/classes.lisp: MAKE-QUERY now calls SELECT if the selections 
