--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 3 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
-	* Version 2.10.8
+	* db-odbc/odbc-api.lisp: Fix changing nil to "NIL" 
+	for odbc/postgresql backend.
+
+3 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.10.8	
 	* base/conditions.lisp: Add *backend-warning-behavior*
 	special variable.
 	* db-postgresql-socket/postgresql-socket-sql.lisp:
