--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	for odbc/postgresql backend.
 	* db-odbc/odbc-sql.lisp: Fix ATTRIBUTE-TYPE so that
 	it can handle NIL values from the ODBC driver
+	* tests/benchmarks.lisp: New file with initial
+	benchmark suite
 	
 3 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.8	
