--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 	it can handle NIL values from the ODBC driver
 	* tests/benchmarks.lisp: New file with initial
 	benchmark suite
+	* sql/relations.lisp: fix to add subclassing support,
+	minor optimizations [Edi Weitz]
 	
 3 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.8	
