--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+4 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
+	* sql/objects.lisp: added derived type specifier for universal time. 
+	* sql/package.lisp: added #:universal-time to clsql-sys exports. 
+
 3 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* db-odbc/odbc-api.lisp: Fix changing nil to "NIL" 
 	for odbc/postgresql backend.
