--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 4 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
+	* Version 2.10.9
 	* sql/objects.lisp: added derived type specifier for universal time. 
 	* sql/package.lisp: added #:universal-time to clsql-sys exports. 
 	* tests/test-oodml.lisp: added test for translation of boolean slots 
