--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.10.9-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue,  4 May 2004 12:52:19 -0600
+
 cl-sql (2.10.8-1) unstable; urgency=low
 
   * New upstream
