--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+3 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* sql/metaclasses.lisp: Properly store specified-type from
+	direct-slot-definition and then store translated type in
+	effective-slot-definition
+	* sql/objects.lisp: Use specified type when invocating 
+	database-get-type-specifier
+	
 4 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
 	* Version 2.10.9
 	* sql/objects.lisp: added derived type specifier for universal time. 
