--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,14 @@
-3 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* sql/metaclasses.lisp: Properly store specified-type from
 	direct-slot-definition and then store translated type in
 	effective-slot-definition
 	* sql/objects.lisp: Use specified type when invocating 
-	database-get-type-specifier
+	database-get-type-specifier. Return class for def-view-class.
+	* base/basic-sql.lisp: Make :AUTO the default value for
+	:RESULT-TYPES for MAP-QUERY and DO-QUERY.
+	* sql/objects.lisp: Add bigint type
+	* base/loop.lisp: Add placeholder (and warning) for object iteration
+	* TODO: Need results for result-types for map-query and do-query
 	
 4 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
 	* Version 2.10.9
