--- a/ChangeLog
+++ b/ChangeLog
@@ -7,8 +7,9 @@
 	* base/basic-sql.lisp: Make :AUTO the default value for
 	:RESULT-TYPES for MAP-QUERY and DO-QUERY.
 	* sql/objects.lisp: Add bigint type
-	* base/loop.lisp: Add placeholder (and warning) for object iteration
-	* TODO: Need results for result-types for map-query and do-query
+	* base/loop.lisp: Add placeholder for object iteration
+	* test/tests-basic.lisp: Add tests for :result-types for
+	MAP-QUERY and DO-QUERY
 	
 4 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
 	* Version 2.10.9
