--- a/ChangeLog
+++ b/ChangeLog
@@ -7,10 +7,13 @@
 	* base/basic-sql.lisp: Make :AUTO the default value for
 	:RESULT-TYPES for MAP-QUERY and DO-QUERY.
 	* sql/objects.lisp: Add bigint type
-	* base/loop.lisp: Add placeholder for object iteration
+	* base/loop.lisp: Add placeholder and error message for object
+	iteration. Use :result-type :auto for result-set.
 	* test/tests-basic.lisp: Add tests for :result-types for
 	MAP-QUERY and DO-QUERY
-	
+	* test/test-fdml.lisp: Add test for result-types in LOOP
+	and also using single symbol rather than a list for variables.
+
 4 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
 	* Version 2.10.9
 	* sql/objects.lisp: added derived type specifier for universal time. 
