--- a/ChangeLog
+++ b/ChangeLog
@@ -8,12 +8,17 @@
 	:RESULT-TYPES for MAP-QUERY and DO-QUERY.
 	* sql/objects.lisp: Add bigint type
 	* base/loop.lisp: Add placeholder and error message for object
-	iteration. Use :result-type :auto for result-set.
+	iteration. Use :result-type :auto for result-set. Remove 
+	duplicate (and non-correct) code for non-list variables by
+	simply making an atom variable into a list.
 	* test/tests-basic.lisp: Add tests for :result-types for
 	MAP-QUERY and DO-QUERY
 	* test/test-fdml.lisp: Add test for result-types in LOOP
 	and also using single symbol rather than a list for variables.
-
+	Add test that default :result-types is auto for FDML QUERY.
+	* sql/query.lisp: Set default for :result-types to :auto in
+	FDML QUERY.
+	
 4 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
 	* Version 2.10.9
 	* sql/objects.lisp: added derived type specifier for universal time. 
