--- a/ChangeLog
+++ b/ChangeLog
@@ -1,26 +1,33 @@
 4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.10-pre
-	* sql/metaclasses.lisp: Properly store specified-type from
-	direct-slot-definition and then store translated type in
-	effective-slot-definition
-	* sql/objects.lisp: Use specified type when invocating 
-	database-get-type-specifier. Return class for def-view-class.
-	* base/basic-sql.lisp: Make :AUTO the default value for
-	:RESULT-TYPES for MAP-QUERY and DO-QUERY.
-	* sql/objects.lisp: Add bigint type
 	* base/loop.lisp: Add object iteration. Use :result-type
 	:auto for result-set. Remove 
 	duplicate (and non-correct) code for non-list variables by
 	simply making an atom variable into a list. 
+	* sql/package.lisp: Remove unnecessary clsql-sys package
+	and replace it with clsql.
+	* sql/metaclasses.lisp: Properly store specified-type from
+	direct-slot-definition and then store translated type in
+	effective-slot-definition
+	* sql/classes.lisp: Don't output type in sql-output
+	for SQL-IDENT-ATTRIBUTE. This is in preparation for supporting
+	[foo :integer] as fields in SELECT.
+	* sql/query.lisp: Set default for :result-types to :auto in
+	FDML QUERY.
+	* sql/objects.lisp: Use specified-type when invocating 
+	database-get-type-specifier. def-view-class macro now returns
+	the class instance.
+	* base/basic-sql.lisp: Make :AUTO the default value for
+	:RESULT-TYPES for MAP-QUERY and DO-QUERY.
+	* sql/objects.lisp: Add bigint type
 	* test/tests-basic.lisp: Add tests for :result-types for
 	MAP-QUERY and DO-QUERY
 	* test/test-fdml.lisp: Add test for result-types in LOOP
 	and also using single symbol rather than a list for variables.
 	Add test that default :result-types is auto for FDML QUERY.
-	* sql/query.lisp: Set default for :result-types to :auto in
-	FDML QUERY.
-	* test/test-oodml.lisp: Enable OO loop iteration test with
-	slight change.
+	* test/test-syntax.lisp: Don't expect TYPE in the SQL-OUTPUT
+	of SQL-IDENT-ATTRIBUTE.
+	* test/test-oodml.lisp: Enable OO loop iteration test
 	
 4 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
 	* Version 2.10.9
