--- a/ChangeLog
+++ b/ChangeLog
@@ -27,7 +27,8 @@
 	Add test that default :result-types is auto for FDML QUERY.
 	* test/test-syntax.lisp: Don't expect TYPE in the SQL-OUTPUT
 	of SQL-IDENT-ATTRIBUTE.
-	* test/test-oodml.lisp: Enable OO loop iteration test
+	* test/test-oodml.lisp: Enable OO loop iteration test,
+	modify it so it doesn't depend on boolean where.
 	
 4 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
 	* Version 2.10.9
