--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
-	* Version 2.10.10-pre
+	* base/basic-sql.lisp: Avoid multiple evaluation
+	of query-expression in DO-QUERY
+	
+4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.10.10
 	* base/loop.lisp: Add object iteration. Use :result-type
 	:auto for result-set. Remove 
 	duplicate (and non-correct) code for non-list variables by
