--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* base/basic-sql.lisp: Avoid multiple evaluation
 	of query-expression in DO-QUERY
+	* sql/objects.lisp: Make SELECT a normal function.
+	SELECT now accepts type-modified database identifiers, such as
+        [foo :string] which means that the values in column foo are returned 
+        as Lisp strings.
+	* test/test-fdml.lisp: Add tests for type-modified
+	database identifiers.
 	
 4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.10
