--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,22 @@
 4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.10.11
 	* base/basic-sql.lisp: Avoid multiple evaluation
 	of query-expression in DO-QUERY
 	* sql/objects.lisp: Make SELECT a normal function.
 	SELECT now accepts type-modified database identifiers, such as
         [foo :string] which means that the values in column foo are returned 
         as Lisp strings. Add new *update-records-on-make-instance* special
-	variable controlling automatic creation of new instances.
+	variable controlling automatic creation of new instances. Add missing
+	RESULT-TYPES keyword to FIND-ALL. Add :target-slot support.
 	* sql/packages.lisp: Export *update-records-on-make-instance* 
+	* test/test-oodml.lisp: Add tests for :target-slot and many-to-many
+	selections.
 	* test/test-fdml.lisp: Add tests for type-modified
 	database identifiers.
+	* test/test-init.lisp: Stop using add-relation since implementing
+	many-to-many joins. Use *update-records-on-make-instance* 
+	to automatically store records on instance creation. Add many-to-many
+	employee-address view-class.
 	
 4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.10
