--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* TODO: New section on optimizations, especially optimizing JOINs.
+
+4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.11
 	* base/basic-sql.lisp: Avoid multiple evaluation
 	of query-expression in DO-QUERY
