--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* TODO: New section on optimizations, especially optimizing JOINs.
-
+	* sql/objects.lisp: Have :target-slot return of list of lists rather
+	than a list of cons pairs to be conformant with CommonSQL.
+	
 4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.11
 	* base/basic-sql.lisp: Avoid multiple evaluation
