--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 	* TODO: New section on optimizations, especially optimizing JOINs.
 	* sql/objects.lisp: Have :target-slot return of list of lists rather
 	than a list of cons pairs to be conformant with CommonSQL.
+	Make :target-slot much more efficient by using a SQL inner join
+	statement and just requiring one SQL query.
+	* sql/classes.lisp: Add :inner-join and :on slots to sql-query class
+	and process them for query output-sql.
 	
 4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.11
