r9253: Add *db-auto-sync* special var for controlling creation/updating of db records when objects are created/manipulated. Import symbols from time.lisp into clsql.

--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@ TESTS TO ADD
 * Large object testing
 * Test bigint type
 * :db-constraint tests
-* *update-records-on-make-instance*
+* test *db-auto-sync* 
 * test :retrieval :deferred joins
 
 COMMONSQL SPEC
