--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+6 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
+        * sql/objects.lisp: replace *update-records-on-make-instance* with 
+        *db-auto-sync* which also controls both automatic creation of 
+        new records on creation of new instance and updating of record 
+        fields on setting of instance slots (as suggested by Edi Weitz). 
+        * tests/test-init.lisp: replace *update-records-on-make-instance* 
+        with *db-auto-sync*. 
+        * sql/package.lisp: replace *update-records-on-make-instance* 
+        with *db-auto-sync*. 
+        * TODO: replace *update-records-on-make-instance* with *db-auto-sync*. 
+        * sql/objects.lisp: remove redundant rebindings of *db-initializing* 
+        and *default-database* in FIND-ALL. 
+	* sql/package.lisp: import time functions from CLSQL-BASE. 
+	* tests/test-time.lisp: replace CLSQl-BASE package qualifier with CLSQL. 
+	* tests/test-fdml.lisp: replace CLSQl-BASE package qualifier with CLSQL. 
+	* tests/test-init.lisp: replace CLSQl-BASE package qualifier with CLSQL. 
+	* tests/test-ooddl.lisp: replace CLSQl-BASE package qualifier with 
+	CLSQL. 
+
 4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* sql/classes.lisp: Add SQL-OBJECT-QUERY type. Have [select 'class]
 	now return a sql-object-query type rather than directly performing a query.
