--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* tests/test-syntax.lisp: Add syntax tests for SQL-OBJECT-QUERY
+	
 6 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
         * sql/objects.lisp: replace *update-records-on-make-instance* with 
         *db-auto-sync* which also controls both automatic creation of 
