--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
-4 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
-	* tests/test-syntax.lisp: Add syntax tests for SQL-OBJECT-QUERY
+6 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* tests/test-*.lisp: Rename fields so that joins occur on
+	fields with different names. This ensures that join code is
+	selecting the proper name.
+	* test/test-init.lisp: Add :base-table for employee-address
+	view class for testing.
+	* sql/objects.lisp: Use view-table rather than name of table
+	in a number of places to fix errors noted with using :base-table.
 	
 6 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
         * sql/objects.lisp: replace *update-records-on-make-instance* with 
