r9270: No need to specialize finalize-inheritance for openmcl

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* sql/metaclass.lisp: Work-around openmcl's CHANGE-CLASS
 	changing the type-specifier. Use a lisp type of (OR NULL FOO)
 	for a specified-type of FOO unless :db-constraints :not-null.
+	No need to specialize finalize-inheritance for openmcl.
 	* tests/test-*.lisp: Rename fields so that joins occur on
 	fields with different names. This ensures that join code is
 	selecting the proper name.
