--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 7 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* docs/intro.xml: Upload location of a README file
 	* sql/metaclass.lisp: Work-around openmcl's CHANGE-CLASS
 	changing the type-specifier. Use a lisp type of (OR NULL FOO)
 	for a specified-type of FOO unless :db-constraints :not-null.
