--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 7 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* tests/test-init.lisp: Add non-index fields for testing 
+	join class employee-addresss
+	* test/test-oodml.lisp: Add tests for retrieval immediate
+	
+7 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* docs/intro.xml: Upload location of a README file
 	* sql/metaclass.lisp: Work-around openmcl's CHANGE-CLASS
 	changing the type-specifier. Use a lisp type of (OR NULL FOO)
