--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 8 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* sql/objects.lisp: Add :retrieval :immediate for
+	object selections
 	* tests/test-init.lisp: Add non-index fields for testing 
 	join class employee-addresss
 	* test/test-oodml.lisp: Add tests for retrieval immediate
