--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 9 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.15
+	* LATEST-TEST-RESULTS: results with current version
 	* sql/kmr-mop.lisp: Make CMUCL reader macros specific for cmu18
 	since cmu19 has opposite order of class slots.
 	* sql/objects.lisp: Fix (setf slot-value-using-class) for Lispworks
