--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+10 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* sql/kmr-mop.lisp: Explicitly check slot order and
+	store as a cl:*feature*
+	
 9 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.15
 	* LATEST-TEST-RESULTS: results with current version
